--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,15 +8,39 @@
     <link rel="stylesheet" href="/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
-        <h1>G3 fitness club</h1>
+        <table class="tab1">
+            <tr>
+                <td> <img src="https://img.freepik.com/premium-vector/fitness-logo_25327-145.jpg?w=740" alt="404"
+                        class="rasm1"></td>
+                <td>
+                    <h1>G3 fitness club</h1>
+                </td>
+            </tr>
+        </table>
     </header>
-
-
-
+    <br><br>
+    <table class="tab2">
+        <div>
+        <tr>
+            <td><img src="https://images.squarespace-cdn.com/content/v1/5509111de4b04bae5abb83cc/1636145741515-S3MLFUVQZ7L1Q5XM6W9X/DSC_0801-11.jpg?format=2500w"
+                    alt="404" class="img2"></td>
+            <td><h1>Fitnes-klub barcha zarur talablarga to'la javob beradi:</h1><h2> hi-tech uslubida bezatilgan keng mashg'ulot
+                xonasi, shahar manzarasi ko'rinib turadigan maxsus kardiotrenajyorlari, alohida ayollar hududi, zal
+                bo'ylab zamonaviy uskunalar bilan jihozlangan, ayollar va erkaklar uchun alohida yuvinish xonalari ham
+                foydalanuvchilar xizmatida.
+<br>
+                Zalda jamoaviy va alohida mashqlar uchun krossfit, raqs va yoga, bundan tashqari boks, kikboksing,
+                dzyudo kabi yakkakurash mashg'ulotlari uchun yumshoq qoplamali “tatami” va haqiqiy ring ham mavjud</h2> </td>
+        </tr>
+    </div>
+    </table>
+<br>
 
 
 
 </body>
+
 </html>
