--- a/index.html
+++ b/index.html
@@ -24,21 +24,44 @@
     <br><br>
     <table class="tab2">
         <div>
-        <tr>
-            <td><img src="https://images.squarespace-cdn.com/content/v1/5509111de4b04bae5abb83cc/1636145741515-S3MLFUVQZ7L1Q5XM6W9X/DSC_0801-11.jpg?format=2500w"
-                    alt="404" class="img2"></td>
-            <td><h1>Fitnes-klub barcha zarur talablarga to'la javob beradi:</h1><h2> hi-tech uslubida bezatilgan keng mashg'ulot
-                xonasi, shahar manzarasi ko'rinib turadigan maxsus kardiotrenajyorlari, alohida ayollar hududi, zal
-                bo'ylab zamonaviy uskunalar bilan jihozlangan, ayollar va erkaklar uchun alohida yuvinish xonalari ham
-                foydalanuvchilar xizmatida.
-<br>
-                Zalda jamoaviy va alohida mashqlar uchun krossfit, raqs va yoga, bundan tashqari boks, kikboksing,
-                dzyudo kabi yakkakurash mashg'ulotlari uchun yumshoq qoplamali “tatami” va haqiqiy ring ham mavjud</h2> </td>
-        </tr>
-    </div>
+            <tr>
+                <td><img src="https://images.squarespace-cdn.com/content/v1/5509111de4b04bae5abb83cc/1636145741515-S3MLFUVQZ7L1Q5XM6W9X/DSC_0801-11.jpg?format=2500w"
+                        alt="404" class="img2"></td>
+                <td>
+                    <h1>Fitnes-klub barcha zarur talablarga to'la javob beradi:</h1>
+                    <h2> hi-tech uslubida bezatilgan keng mashg'ulot
+                        xonasi, shahar manzarasi ko'rinib turadigan maxsus kardiotrenajyorlari, alohida ayollar hududi,
+                        zal
+                        bo'ylab zamonaviy uskunalar bilan jihozlangan, ayollar va erkaklar uchun alohida yuvinish
+                        xonalari ham
+                        foydalanuvchilar xizmatida.
+                        <br>
+                        Zalda jamoaviy va alohida mashqlar uchun krossfit, raqs va yoga, bundan tashqari boks,
+                        kikboksing,
+                        dzyudo kabi yakkakurash mashg'ulotlari uchun yumshoq qoplamali “tatami” va haqiqiy ring ham
+                        mavjud
+                    </h2>
+                </td>
+            </tr>
+        </div>
     </table>
-<br>
-
+    <br>
+    <table class="tab3">
+        <tr>
+            <td>
+                <h2>Eng muhimi esa, yaqin kunlardagi ochilish sabab fitnes-klub 50 foizlik chegirmalarni taklif
+                    qilmoqda. Bu
+                    hali hammasi emas. 1 oy uchun abonement olsangiz, 50 foiz chegirmaga, 3 oylik abonement olsangiz,
+                    qo'shimcha yana 10 foiz chegirmaga, 6 oylik to'lovni amalga oshirsangiz esa qo'shimcha 15 foiz,
+                    yillik
+                    a'zomiz bo'lsangiz, 20 foiz qo'shimcha chegirma olasiz! Shunday qilib 70 foizgacha chegirmalarni
+                    qo'lga
+                    kiritishga shoshiling.
+                </h2>
+            </td>
+            <td><img src="https://daryo.uz/cache/2017/10/7-8-680x453.jpg" alt=""></td>
+        </tr>
+    </table>
 
 
 </body>
