--- a/index.html
+++ b/index.html
@@ -62,7 +62,19 @@
             <td><img src="https://daryo.uz/cache/2017/10/7-8-680x453.jpg" alt=""></td>
         </tr>
     </table>
-
+    <br>
+    <table border="border" class="tab4">
+        <tr>
+            <td><img src="https://scontent.ftas2-2.fna.fbcdn.net/v/t39.30808-6/279180655_4845530888891660_99089933287405279_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=a26aad&_nc_ohc=GTqmSX59aIsAX9Dw4aB&_nc_ht=scontent.ftas2-2.fna&oh=00_AfDpxMM8NvBk7U6bRZsbRmYqnJeyPX8HMy3-os92uncW0A&oe=643FC5C7"
+                    alt="" class="coaches"></td>
+            <td>
+                <h2>Shaxsiy fitnes murabbiyining vazifasi sizni to'g'ri yo'nalishga
+                    yo'naltirish, mashq qilish texnikasini nazorat qilish va maqsadingizga erishishga yordam berishdir.
+                    Qolgan hamma narsa sizga bog'liq: mehnatsevarlik, xohish, retseptlarga rioya qilish.</h2>
+                    <br><br><a href="/index2.html">BIZNING MURABBIYLAR haqida</a>
+            </td>
+        </tr>
+    </table>
 
 </body>
 
